# veil-demo

./: .gitignore  Veil_Engineering_Tickets.md  Veil_Protocol_Specification_v1.0.docx
veil/: Package.swift
veil-demo-server/: README.md  package.json  server.js
veil-demo-web/: DEPLOY.md  README.md  index.html  package-lock.json  package.json
veil-demo-web/src/: VeilDemo.jsx  main.jsx
veil-relay/: Cargo.toml  build.rs
veil-relay/proto/: veil.proto
veil-relay/src/: config.rs  error.rs  main.rs
veil-relay/src/api/: messages.rs  mod.rs  prekeys.rs  push.rs  registration.rs
veil-relay/src/auth/: anonymous_token.rs  mod.rs  rate_limiter.rs
veil-relay/src/proto/: mod.rs
veil-relay/src/push/: apns.rs  mod.rs
veil-relay/src/sealed_sender/: envelope.rs  mod.rs
veil-relay/src/storage/: accounts.rs  message_queue.rs  mod.rs  prekey_store.rs
veil-relay/tests/: anon_credentials_test.rs  integration_test.rs  load_test.rs  sealed_sender_test.rs
veil/AppHost/: AppEntry.swift
veil/Sources/CLibOQS/: module.modulemap  oqs_stubs.c  shim.h
veil/Sources/VeilCrypto/KDF/: HKDF.swift  (+1 more)
veil/Tests/VeilCryptoTests/: AnonymousTokenClientTests.swift  CensorshipDetectorTests.swift  CertificatePinningTests.swift  DHRatchetTests.swift  DomainFrontingTests.swift  FogClientTests.swift  FullServiceNodeClientTests.swift  HKDFTests.swift  IdentityKeyTests.swift  MLKEM1024Tests.swift  MessagePipelineTests.swift  MobileCoinKeyPairTests.swift  MobileCoinWalletTests.swift  PQXDHTests.swift  PaymentStateMachineTests.swift  PrekeyManagerTests.swift  RelayClientTests.swift  SPQRRatchetTests.swift  SecureBytesTests.swift  SessionManagerTests.swift  SignedConfigUpdateTests.swift  SubaddressDeriverTests.swift  SymmetricRatchetTests.swift  TXOSelectorTests.swift  TrafficPaddingTests.swift  TransactionBuilderTests.swift  TripleRatchetTests.swift
veil/VeilApp.xcodeproj/: project.pbxproj
(+112 files in other folders)
