[package]
name = "veil-relay"
version = "0.1.0"
edition = "2021"
description = "Veil Relay Service — Zero-knowledge message delivery for post-quantum encrypted chat"
license = "AGPL-3.0"

[dependencies]
# HTTP/2 + async framework
axum = { version = "0.7", features = ["http2", "macros"] }
hyper = { version = "1", features = ["http2", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"] }

# TLS 1.3 (no OpenSSL)
rustls = { version = "0.23", default-features = false, features = ["tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"

# Protobuf
prost = "0.13"
prost-types = "0.13"

# Embedded storage
sled = "0.34"

# Cryptography
curve25519-dalek = { version = "4", features = ["serde", "rand_core"] }
ring = "0.17"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for APNs push)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

# TLS server (axum)
axum-server = { version = "0.7", features = ["tls-rustls"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
axum-test = "15"
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "load"
harness = false
